[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/ThrowableObject.gd" type="Script" id=1]
[ext_resource path="res://materials/Sprite.tres" type="Material" id=2]
[ext_resource path="res://assets/sprites/objects.png" type="Texture" id=3]
[ext_resource path="res://scripts/Sprite.gd" type="Script" id=4]
[ext_resource path="res://assets/sfx/Link - Bomb Deploy.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/Yoshi - Egg Throw.wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/_InteractionArea_ActivePassive.gd" type="Script" id=7]

[sub_resource type="CylinderShape" id=1]
radius = 1.5

[sub_resource type="SphereShape" id=2]

[node name="ThrowableObject" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, -5 )
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
material_override = ExtResource( 2 )
pixel_size = 0.08
texture = ExtResource( 3 )
vframes = 8
hframes = 8
frame = 8
script = ExtResource( 4 )

[node name="Sounds" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, 5 )

[node name="PickupSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource( 5 )
unit_size = 2.0

[node name="ThrowSound" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource( 6 )
unit_size = 2.0

[node name="InteractionArea" type="Area" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.176345, 0 )
shape = SubResource( 2 )
